--- a/contact-form/index.html
+++ b/contact-form/index.html
@@ -5,7 +5,7 @@
   	<title>Contact Form</title>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/Group_223__1_.png" type="image/png">
+        <link rel="icon" href="https://f003.backblazeb2.com/file/imagesapp/Group+96+(1).png" type="image/png">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
 	<body>
 
 		 <video class="video-background" autoplay muted loop>
-			<source src="https://dsfokvnqjxxsziqofvss.supabase.co/storage/v1/object/public/Front_icon/coolchat/video/fire__2.mp4?t=2024-06-01T17%3A25%3A08.070Z" type="video/mp4">
+			<source src="https://f003.backblazeb2.com/file/imagesapp/fire__2.mp4" type="video/mp4">
 	</video> 
 
 
